testdata/baselines/reference/submodule/compiler/computedPropertiesNarrowed.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
computedPropertiesNarrowed.ts(1,18): error TS2304: Cannot find name 'Math'.
computedPropertiesNarrowed.ts(20,9): error TS2304: Cannot find name 'Symbol'.
computedPropertiesNarrowed.ts(26,6): error TS2304: Cannot find name 'Symbol'.
computedPropertiesNarrowed.ts(29,27): error TS2304: Cannot find name 'Symbol'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== computedPropertiesNarrowed.ts (4 errors) ====
    const x: 0 | 1 = Math.random()? 0: 1;
                     ~~~~
!!! error TS2304: Cannot find name 'Math'.
    declare function assert(n: number): asserts n is 1;
    assert(x);
    export let o = {
        [x]: 1 // error narrow type !== declared type
    }
    
    
    const y: 0 = 0
    export let o2 = {
        [y]: 1 // ok literal computed type 
    }
    
    // literals are ok
    export let o3 = { [1]: 1 }
    export let o31 = { [-1]: 1 }
    
    export let o32 = { [1-1]: 1 } // error number 
    
    let u = Symbol();
            ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    export let o4 = {
        [u]: 1 // Should error, nut a unique symbol
    }
    
    export let o5  ={
        [Symbol()]: 1 // Should error
         ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    }
    
    const uu: unique symbol = Symbol();
                              ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    export let o6  = {
        [uu]: 1 // Should be ok
    }
    
    
    function foo (): 1 { return 1; }
    export let o7 = {
        [foo()]: 1 // Should error
    };
    
    let E = { A: 1 } as const
    export const o8 = {
        [E.A]: 1 // Fresh 
    }
    
    function ns() { return { v: 0 } as const }
    export const o9 = {
        [ns().v]: 1
    }
    